# pytest-example

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
src/pytest_example/: __init__.py
tests/: test_example.py
typings/pytest/: __init__.pyi
