[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-example"
description = ''
readme = "README.md"
requires-python = ">=3.11"
keywords = []
authors = [
  { name = "Cal Jacobson", email = "cj81499@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/cj81499/pytest-example#readme"
Issues = "https://github.com/cj81499/pytest-example/issues"
Source = "https://github.com/cj81499/pytest-example"

[tool.hatch.version]
path = "src/pytest_example/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "isort",
  "mypy",
  "pytest-cov",
  "pytest",
  "pytest-raisin",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/pytest_example --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["311"]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/pytest_example/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
